--- a/app/src/main/res/layout/circle_head_bg.xml
+++ b/app/src/main/res/layout/circle_head_bg.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/user_head_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/user_head_container"
-    android:orientation="vertical"
     android:clipChildren="false"
     android:clipToPadding="false"
+    android:orientation="vertical"
     app:layout_collapseMode="parallax"
     app:layout_collapseParallaxMultiplier="0.8">
 
-        <ImageView
-            android:id="@+id/uc_zoomiv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:tag="overScroll"/>
+    <ImageView
+        android:id="@+id/uc_zoomiv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:tag="overScroll" />
 
 </LinearLayout>
